[gd_scene load_steps=3 format=3 uid="uid://ro0gwgo43mhx"]

[ext_resource type="Script" path="res://Scripts/unit_mod_container.gd" id="1_4dc6v"]

[sub_resource type="LabelSettings" id="LabelSettings_deef4"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="UnitModContainer" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 0
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_4dc6v")

[node name="UnitModName" type="Label" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Class Text"
label_settings = SubResource("LabelSettings_deef4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="UnitModName"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_hover_on_event"]
[connection signal="mouse_exited" from="." to="." method="_on_hover_off_event"]
